# zoomac

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
config/: autonomy.yaml
docs/design/: 01-overview.md  02-architecture.md  03-core-loop.md  04-gateway.md  05-sub-agents.md  06-skills.md  07-autonomy.md  08-sandbox.md  09-scheduler.md  10-anti-hallucination.md  11-self-evolution.md  12-resilience.md  13-project-structure.md  14-decision-log.md  15-implementation-plan.md
scripts/: runpod-gemma.sh  runpod-stop.sh
src/zoomac/: __init__.py  main.py
src/zoomac/agents/: __init__.py  bus.py  lifecycle.py  manager.py
src/zoomac/autonomy/: __init__.py  classifier.py  pipeline.py  policy.py
src/zoomac/brain/: agent.py  client.py  commands.py  compactor.py  deps.py  memory_extract.py  optimizer.py  project_context.py  (+5 more)
tests/: conftest.py  test_agent.py  test_agents.py  test_autonomy.py  test_client.py  test_gateway.py  test_memory.py  test_planner.py  test_planner_runtime.py  test_queue.py  test_runner.py  test_runtime_agent.py  test_runtime_bundle.py  test_runtime_provider.py  test_sandbox.py  test_scaffolding.py  test_scheduler.py  test_skills.py  test_tools_registry.py  test_websocket.py
vscode-extension/: .vscodeignore  package-lock.json  package.json
vscode-extension/media/: chat.css  chat.js
vscode-extension/scripts/: memgate_bridge.py  memgate_daemon.py
vscode-extension/src/: chatPanel.ts  chatViewProvider.ts  extension.ts  protocol.ts  sessionStore.ts
(+66 files in other folders)
